# devops-awx-mcp

./: .gitignore  CLAUDE.md  Dockerfile.multi_worker  Dockerfile.single_worker  ci_pipeline.yaml  docker-compose-mw.yaml  docker-compose-sw.yaml  pyproject.toml  requirements.txt  sonar-project.properties
src/: config.py  main.py  mcp_server.py  web_server.py
src/client/: __init__.py  ansible_client.py  pagination.py
src/controllers/: healthy_controller.py
src/routes/: __init__.py  healthy.py
src/services/: __init__.py  ad_hoc_service.py  base_service.py  group_service.py  job_service.py  project_service.py  system_service.py  workflow_service.py
src/tools/: __init__.py  ad_hoc.py  credentials.py  groups.py  hosts.py  inventories.py  job_templates.py  jobs.py  organizations.py  projects.py  schedules.py  system.py  teams.py  users.py  workflows.py
src/utils/: validators.py
tests/: conftest.py
tests/test_client/: test_ansible_client.py  test_pagination.py
tests/test_routes/: test_healthy.py
tests/test_services/: test_base_service.py  test_job_service.py  test_workflow_service.py
tests/test_tools/: test_inventories.py  test_jobs.py  test_system.py
tests/test_utils/: test_validators.py
