[project]
name = "devops-awx-mcp"
version = "1.0.0"
description = "MCP Server for Ansible Tower/AWX"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "setuptools>=75.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]

[tool.pdm.scripts]
dev = {cmd = "python main.py", env = {"SERVER_MODE" = "http"}}
main = {cmd = "python main.py", env = {"SERVER_MODE" = "http"}}
stdio = {cmd = "python main.py", env = {"SERVER_MODE" = "stdio"}}
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
test = "pytest tests/ -v --cov=src --cov-report=term-missing"
test-html = "pytest tests/ -v --cov=src --cov-report=html"
export = "pdm export -o requirements.txt --without-hashes"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
